# research-agent

./: .env.example  .gitignore  README.md  env.template  main.py  pyproject.toml  requirements.txt  run_processing.sh  test_doc.txt
nbs/: analyst.py  parser.ipynb  process_documents.py  utils.py
scripts/: analyze_qdrant_collections.py  benchmark_parallel_processing.py  chat_research.py  demo_ingestion.py  extract_tables.py  process_excel_files.py  quick_test.py  run_algorithmic_ingestion.py  run_api.py  run_chat_api.py  run_enhanced_semantic_ingestion.py  run_excel_analysis.py  run_ingestion.py  run_knowledge_graph_ingestion.py  run_research_workflow.py  run_semantic_ingestion.py  run_semantic_ingestion_old.py  schema_generator.py  setup.py  setup_knowledge_graph.py  split_excel_sheets.py  test_chat_api.py  working_analysis.py
src/: __init__.py  config.py  main.py  research_workflow.py
src/agents/: __init__.py  base_agent.py  chat_planner.py  document_analyst.py  orchestrator.py  planner_agent.py  research_orchestrator.py  research_planner.py  researcher_agent.py  synthesis_agent.py  synthesizer_agent.py  web_researcher.py
src/api/: __init__.py  mcp_server.py  server.py
tests/: __init__.py  test_chunk_retrieval.py  test_connection_cleanup.py  test_document_processing.py  test_embeddings.py  test_excel_integration.py  test_excel_processing.py  test_excel_sheet_metadata.py  test_header_detection.py  test_knowledge_graph.py  test_parallel_processing.py  test_recursive_ingestion.py  test_single_file.py  test_skip_processed.py  test_token_management.py
(+70 files in other folders)
